--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -4,7 +4,6 @@
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -83,6 +82,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: lightgray;
 }
 
 body {
